getPdfMetadata function implemented
