# src/main/java/dk/kb/pdfservice/alma/ApronType.java
@@ -1,6 +1,0 @@
-package dk.kb.pdfservice.alma;
-
-public enum ApronType {
-    
-    A, B, C, D, F, G, H, I, J, K, L, M, N, O, P, Q, R, S, T, U, V, W, X, Y, Z, Unknown
-}
